--- a/XJoy.csproj
+++ b/XJoy.csproj
@@ -60,6 +60,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenericPrompt.Designer.cs">
+      <DependentUpon>GenericPrompt.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="vJoyManager.cs" />
     <Compile Include="XInputManager.cs" />
+    <EmbeddedResource Include="GenericPrompt.resx">
+      <DependentUpon>GenericPrompt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
