--- a/XJoy.csproj
+++ b/XJoy.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="vJoyInterfaceWrap">
-      <HintPath>..\..\..\vJoySDK\c#\x86\vJoyInterfaceWrap.dll</HintPath>
+      <HintPath>$(vjoy)</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
